--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "bulma": "^0.9.4",
-        "jquery": "1.11",
+        "jquery": "^3.6.4",
         "stonehenge.js": "^0.0.5"
     }
 }
