--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,9 @@
     "/vendor/jquery/jquery.js": "/vendor/jquery/jquery.js",
     "/vendor/jquery/jquery.min.js": "/vendor/jquery/jquery.min.js",
     "/vendor/jquery/jquery.min.map": "/vendor/jquery/jquery.min.map",
+    "/vendor/jquery/jquery.slim.js": "/vendor/jquery/jquery.slim.js",
+    "/vendor/jquery/jquery.slim.min.js": "/vendor/jquery/jquery.slim.min.js",
+    "/vendor/jquery/jquery.slim.min.map": "/vendor/jquery/jquery.slim.min.map",
     "/vendor/aos/aos.css": "/vendor/aos/aos.css",
     "/vendor/aos/aos.js": "/vendor/aos/aos.js",
     "/vendor/stonehenge.js/stonehenge.css": "/vendor/stonehenge.js/stonehenge.css",
