--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,16 @@
   ],
   "license": "proprietary",
   "require": {
-    "php": "^8.0"
+    "php": "^8.0",
+    "pipedrive/pipedrive": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10"
   },
   "autoload": {
-    "psr-4": {}
+    "psr-4": {
+        "Theme\\": "core/"
+    }
   },
   "autoload-dev": {},
   "scripts": {},
