move to non-enterprise recaptcha

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "php": "^8.0",
         "ext-curl": "*",
         "pipedrive/pipedrive": "^4.0",
-        "google/cloud-recaptcha-enterprise": "^1.4",
+        "guzzlehttp/guzzle": "*",
         "guzzlehttp/promises": "^1.5"
     },
     "require-dev": {
